# macrowow

./: .gitignore  Cargo.toml  README.md
es-core/: Cargo.toml
es-core/src/: lib.rs
es-derive2/: Cargo.toml
es-derive2-test/: Cargo.toml
es-derive2-test/src/: lib.rs
es-derive2-test/tests/: filtered_expansion.rs  simple_injectable.rs  test_combined_attrs.rs
es-derive2-test/tests/compile_fail/: missing_awaits.rs
es-derive2-test/tests/expand/: event_basic.expanded.rs  event_basic.rs  event_with_dotted_paths.rs  event_with_injectable.rs  injectable_event_test.rs  multi_correlation.expanded.rs  multi_correlation.rs  transfer_response.expanded.rs
es-derive2-test/tests/expanded_simple/: event_basic.rs
es-derive2-test/tests/expansion/inputs/: event_basic.expanded.rs  event_basic.rs  event_with_dotted_paths.expanded.rs  event_with_dotted_paths.rs  event_with_injectable.expanded.rs  event_with_injectable.rs  injectable_event_test.expanded.rs  injectable_event_test.rs  multi_correlation.expanded.rs  multi_correlation.rs  register_aggregate_apply.expanded.rs  register_aggregate_apply.rs  register_aggregate_handle.expanded.rs  register_aggregate_handle.rs  transfer_response.rs  (+5 more)
es-derive2-test/tests/runtime/: awaited_set.rs  injectable.rs  mod.rs
es-derive2-test/tests/snapshots/: filtered_expansion__event_basic.snap  filtered_expansion__event_with_injectable.snap
es-derive2/src/: awaited_set.rs  event.rs  injectable_event.rs  lib.rs  register.rs  shared.rs
es-interface/: Cargo.toml
es-interface/src/: aggregate.rs  event.rs  lib.rs  projector.rs  subscriber.rs
(+34 files in other folders)
