[package]
name = "es-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
es-derive2 = { path = "../es-derive2" }
downcast-rs = "1.2"
nutype = { version = "0.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
